--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@tiaanduplessis/env",
-    "version": "1.0.0",
+    "version": "1.1.0",
     "description": "Get access to your .env configuration",
     "license": "MIT",
     "repository": {
@@ -10,8 +10,9 @@
     "homepage": "https://github.com/tiaanduplessis/env",
     "bugs": "https://github.com/tiaanduplessis/env",
     "main": "index.js",
-
-    "files": ["index.js"],
+    "files": [
+        "index.js"
+    ],
     "scripts": {
         "test": "jest",
         "format": "prettier-standard index.js",
